Fixing alignment

--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,6 @@ body {
   color: #195a7c;
 }
 
-.center {
-  text-align: center !important;
-}
-
 a {
   color: #ef9a00;
   text-decoration: underline;
